@@ -2,6 +2,8 @@ Changelog for SimpleSearch.
 
 SimpleSearch next
 ========================================================================
+- Fixed indexing resource when it's not published or deleted
+- Fixed error with redeclared function in plugin
 - Added includeTVList parameter
 - Added extractSource parameter - names the field for the extract, or a snippet to run (which is passed the resource array as properties)
 
